<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#80222222"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="5dp"
        android:background="#8033FFFF"
        android:gravity="center_horizontal"
        android:text="@string/intro"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border"
        android:collapseColumns="true"
        android:layout_margin="10dp" >

        <TableRow>

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_span="2"
                android:layout_weight="0"
                android:contentDescription="UserProfileImage"
                android:src="@drawable/profile" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/username"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/birthday"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/userbirthday"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/major"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/usermajor"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/studentno"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/userstudentno"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/hobby"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/userhobby"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</LinearLayout>